--- a/reportes.html
+++ b/reportes.html
@@ -12,17 +12,17 @@
     <header class="page-principal">
         <nav class="navegacion-principal">
             <div class="contenedor-links">
-                    <a class="link__item" href="#"><img class="img-nav" src="/recursos/icon-mas.svg" alt="icon-mas">Añadir</a>
+                    <a class="link__item" href="/add.html"><img class="img-nav" src="/recursos/icon-mas.svg" alt="icon-mas">Añadir</a>
 
                     <a class="link__item" href="#"><img class="img-nav" src="/recursos/Icon open-reload.svg" alt="icon-reload">Refrescar</a>
 
-                    <a class="link__item" href="#"><img class="img-nav" src="/recursos/icon-basura.svg" alt="bote-basura">Eliminar</a>
+                    <a class="link__item" href="/delete.html"><img class="img-nav" src="/recursos/icon-basura.svg" alt="bote-basura">Eliminar</a>
 
-                    <a class="link__item logo-principal" href="#"><img class="img-nav logo-empresaK" src="/recursos/logo.svg" alt="logo-empresa"></a>
+                    <a class="link__item logo-principal" href="index.html"><img class="img-nav logo-empresaK" src="/recursos/logo.svg" alt="logo-empresa"></a>
 
                     <a class="link__item" href="/reportes.html"><img class="img-nav" src="/recursos/icon-bug.svg" alt="icon-bug">Reportar</a>
 
-                    <a class="link__item" href="#"><img class="img-nav" src="/recursos/icon-pregunta.svg" alt="icon-interrogacion">Ayuda</a>
+                    <a class="link__item" href="/ayuda.html"><img class="img-nav" src="/recursos/icon-pregunta.svg" alt="icon-interrogacion">Ayuda</a>
             </div>
             <div class="log-out">
                 <a href="#"><img class="settings" src="recursos/icon-configuracion.svg" alt="icon-configuracion"></a>
@@ -54,14 +54,14 @@
                         <label for="prioridad">Prioridad
                             <select name="nivel-prioridad" aria-label="Seleccione la prioridad" id="prioridad">
                                 <option value="prioridad1">Error en la funcionalidad</option>
-                                <optsion value="prioridad2">Errores de interfaz de usuario</optsion>
+                                <option value="prioridad2">Errores de interfaz de usuario</option>
                                 <option value="prioridad3">Errores de rendimiento</option>
                             </select>
                         </label>
                     </div>
                     <div class="form_input">
                         <label for="descripcion">Descripción del incidente</label>
-                        <textarea placeholder="Haz una descripción detallada del incidente."maxlength="140" rows="8"  id="descripcion"></textarea> 
+                        <textarea placeholder="Haz una descripción detallada del incidente."maxlength="140" rows="5"  id="descripcion"></textarea> 
                     </div>
                 </form>
             </div>
