cambios en index1.1 y en delete

--- a/add.html
+++ b/add.html
@@ -7,18 +7,28 @@
     <link rel="stylesheet" href="css/styleadd.css">
 </head>
 <body>
-    <header>
-        <a href=""><div class="add"><img src="recursos/icon-mas.svg" alt=""> <b>Añadir</b></div></a>
-        <a href=""><div class="refresh"><img src="recursos/Icon open-reload.svg" alt=""><b>Refrescar</b></div></a>
-        <a href=""><div class="delete"><img src="recursos/icon-basura.svg" alt=""><b>Eliminar</b></div></a>
-        <div class="logo"><img src="recursos/logo.svg" alt=""></div>
-        <a href=""><div class="Report"><img src="recursos/icon-bug.svg" alt=""><b>Reportar</b></div></a>
-        <a href=""><div class="help"><img src="recursos/icon-pregunta.svg" alt=""><b>Ayuda</b></div></a>
-        <div class="logout">
-            <img src="recursos/icon-configuracion.svg" alt="" class="config">
-            <img src="recursos/icon-campana.svg" alt="" class="camp">
-            <a href=""><img src="recursos/pp@2x.png" alt="" class="foperfil"></a>
-        </div>  
+    <header class="page-principal">
+        <nav class="navegacion-principal">
+            <div class="contenedor-links">
+                    <a class="link__item" href="/add.html"><img class="img-nav" src="/recursos/icon-mas.svg" alt="icon-mas">Añadir</a>
+
+                    <a class="link__item" href="#"><img class="img-nav" src="/recursos/Icon open-reload.svg" alt="icon-reload">Refrescar</a>
+
+                    <a class="link__item" href="/delete.html"><img class="img-nav" src="/recursos/icon-basura.svg" alt="bote-basura">Eliminar</a>
+
+                    <a class="link__item logo-principal" href="index.html"><img class="img-nav logo-empresaK" src="/recursos/logo.svg" alt="logo-empresa"></a>
+
+                    <a class="link__item" href="/reportes.html"><img class="img-nav" src="/recursos/icon-bug.svg" alt="icon-bug">Reportar</a>
+
+                    <a class="link__item" href="/ayuda.html"><img class="img-nav" src="/recursos/icon-pregunta.svg" alt="icon-interrogacion">Ayuda</a>
+            </div>
+            <div class="log-out">
+                <a href="#"><img class="settings" src="recursos/icon-configuracion.svg" alt="icon-configuracion"></a>
+
+                <a href="#"><img class="notification" src="recursos/icon-campana.svg" alt="icon-campana" ></a>
+                <a href="#"><img class="photo-user" src="recursos/foto-user.png" alt="photo-user" ></a>
+            </div>  
+        </nav>
     </header>
 
     <section class="secadd">
