--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Kario Media</title>
 </head>
 <body>
 
@@ -67,6 +67,19 @@
                     <a href="#"><img class="notification" src="recursos/icon-campana.svg" alt="icon-campana" ></a>
 
                     <a href="#"><img class="photo-user" src="recursos/foto-user.png" alt="photo-user" ></a>
+                </div>
+                <div class="contenedor-log-in">
+                    <details class="perfil" >
+                        <summary>Perfil</summary>
+                        <div class="name-email">
+                            <p>Pedro Felipe Gomez Bonilla</p>
+                            <p>gomezbonilla@gmail.com</p>
+                        </div>
+                        <div class="perfil__links">
+                            <a href="#">Ir a mi perfil</a>
+                            <a href="#">Cerrar sesión</a>
+                        </div>
+                    </details>
                 </div>  
             </nav>
         </div>
