--- a/delete.html
+++ b/delete.html
@@ -31,8 +31,8 @@
         </nav>
     </header>
     <div class="text">
-        <h2>panel de eliminar</h2>
-        <p>Aqui puedes eliminar los elementos en los que ya no se van a trabajar </p>
+        <h2>Panel de eliminar</h2>
+        <p>Aqui puedes eliminar los elementos en los que ya no se va a trabajar </p>
     </div>
     <section class="set-one">
         <div class="container">
