--- a/delete.html
+++ b/delete.html
@@ -16,7 +16,7 @@
 
                     <a class="link__item" href="/delete.html"><img class="img-nav" src="/recursos/icon-basura.svg" alt="bote-basura">Eliminar</a>
 
-                    <a class="link__item logo-principal" href="index.html"><img class="img-nav logo-empresaK" src="/recursos/logo.svg" alt="logo-empresa"></a>
+                    <a class="link__item logo-principal" href="index1.1.html"><img class="img-nav logo-empresaK" src="/recursos/logo.svg" alt="logo-empresa"></a>
 
                     <a class="link__item" href="/reportes.html"><img class="img-nav" src="/recursos/icon-bug.svg" alt="icon-bug">Reportar</a>
 
