creación del cierre de sesión y estilos.

--- a/ayuda.html
+++ b/ayuda.html
@@ -28,7 +28,7 @@
                 <a href="#"><img class="settings" src="recursos/icon-configuracion.svg" alt="icon-configuracion"></a>
 
                 <a href="#"><img class="notification" src="recursos/icon-campana.svg" alt="icon-campana" ></a>
-                <a href="#"><img class="photo-user" src="recursos/foto-user.png" alt="photo-user" ></a>
+                <a href="/sesion.html"><img class="photo-user" src="recursos/foto-user.png" alt="photo-user" ></a>
             </div>  
         </nav>
     </header>
