--- a/index1.1.html
+++ b/index1.1.html
@@ -56,7 +56,7 @@
                 <div class="item">12/12/21</div>
                 <div class="item">Met.Agil</div>
                 <div class="item">1/4</div>
-                <div class="item">s</div>
+                <div class="item"><img src="recursos/porcentaje 1.png" alt=""></div>
                 <div class="item">Marketing</div>
             </div>
 
@@ -68,7 +68,7 @@
                 <div class="item">12/11/21</div>
                 <div class="item">Met.Agil</div>
                 <div class="item">1/4</div>
-                <div class="item">s</div>
+                <div class="item"><img src="recursos/porcentaje 2.png" alt=""></div>
                 <div class="item">Diseño</div>
                
             </div>
@@ -81,7 +81,7 @@
                 <div class="item">12/11/21</div>
                 <div class="item">Met.Fibo</div>
                 <div class="item">1/4</div>
-                <div class="item">s</div>
+                <div class="item"><img src="recursos/porcentaje 3.png" alt=""></div>
                 <div class="item">Developers</div>
             </div>
 
@@ -93,7 +93,7 @@
                 <div class="item">12/09/21</div>
                 <div class="item">N/A</div>
                 <div class="item">1/3</div>
-                <div class="item">s</div>
+                <div class="item"><img src="recursos/porcentaje 4.png" alt=""></div>
                 <div class="item">Gerencia</div>
             </div>
 
@@ -105,7 +105,7 @@
                 <div class="item">12/09/21</div>
                 <div class="item">Met.Fibo</div>
                 <div class="item">1/4</div>
-                <div class="item">s</div>
+                <div class="item"><img src="recursos/porcentaje 5.png" alt=""></div>
                 <div class="item">Marketing</div>
             </div>
 
@@ -119,7 +119,7 @@
                 <div class="item">09/11/21</div>
                 <div class="item">Met.Expo</div>
                 <div class="item">1/2</div>
-                <div class="item"></div>
+                <div class="item"><img src="recursos/porcentaje 6.png" alt=""></div>
                 <div class="item">Producción</div>
             </div>
         </div>   
