cambios en sección ayuda

--- a/ayuda.html
+++ b/ayuda.html
@@ -43,7 +43,7 @@
                 <form action="post">
                     <div class="form_input">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" placeholder="Describe el problema">
+                        <input class="input-sinfiltro" type="text" placeholder="Describe el problema ">
                     </div>
                 </form>
             </div>
