--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="contenedor-links">
                         <a class="link__item" href="/add.html"><img class="img-nav" src="/recursos/icon-mas.svg" alt="icon-mas">Añadir</a>
 
-                        <a class="link__item" href="#"><img class="img-nav" src="/recursos/Icon open-reload.svg" alt="icon-reload">Refrescar</a>
+                        <a class="link__item" href=""><img class="img-nav" src="/recursos/Icon open-reload.svg" alt="icon-reload">Refrescar</a>
 
                         <a class="link__item" href="/delete.html"><img class="img-nav" src="/recursos/icon-basura.svg" alt="bote-basura">Eliminar</a>
 
